--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Ionic App</title>
 
   <base href="/" />
+  <meta name="google-signin-client_id" content="291532548979-lc9m8tgmdv232qshgvr2ehktmu8lh6hm.apps.googleusercontent.com"/>
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
